--- a/assets/t2/example.html
+++ b/assets/t2/example.html
@@ -13,7 +13,42 @@
             <div class="description">
                 Предлагает вам незабываемый отдых на море - мы расположены в экологически чистом районе Мурманской области, что гарантирует вам невиданное ранее единение с природой. Всего 5 часов и 20 минут в полете и вы сможете купаться на побережье Черного моря!
             </div>
-            <img src="assets/images/bear.jpg" alt="Наш слоняра" class="house-image">
+            <img src="assets/images/bear.jpg" alt="" class="house-image">
+        </div>
+        <div class="content">
+            <h1>Гостевой дом &quot;У Марины&quot;</h1>
+            <div class="description">
+                Предлагает вам незабываемый отдых на море - мы расположены в экологически чистом районе Мурманской области, что гарантирует вам невиданное ранее единение с природой. Всего 5 часов и 20 минут в полете и вы сможете купаться на побережье Черного моря!
+            </div>
+            <img src="assets/images/tiger.jpg" alt="" class="house-image">
+        </div>
+        <div class="content">
+            <h1>Гостевой дом &quot;У Григория&quot;</h1>
+            <div class="description">
+                Предлагает вам незабываемый отдых на море - мы расположены в экологически чистом районе Мурманской области, что гарантирует вам невиданное ранее единение с природой. Всего 5 часов и 20 минут в полете и вы сможете купаться на побережье Черного моря!
+            </div>
+            <img src="assets/images/deer.jpg" alt="" class="house-image">
+        </div>
+        <div class="content">
+            <h1>Гостевой дом &quot;У Анфисы&quot;</h1>
+            <div class="description">
+                Предлагает вам незабываемый отдых на море - мы расположены в экологически чистом районе Мурманской области, что гарантирует вам невиданное ранее единение с природой. Всего 5 часов и 20 минут в полете и вы сможете купаться на побережье Черного моря!
+            </div>
+            <img src="assets/images/zebra.jpg" alt="" class="house-image">
+        </div>
+        <div class="content">
+            <h1>Гостевой дом &quot;У Бармалея&quot;</h1>
+            <div class="description">
+                Предлагает вам незабываемый отдых на море - мы расположены в экологически чистом районе Мурманской области, что гарантирует вам невиданное ранее единение с природой. Всего 5 часов и 20 минут в полете и вы сможете купаться на побережье Черного моря!
+            </div>
+            <img src="assets/images/panda.jpg" alt="" class="house-image">
+        </div>
+        <div class="content">
+            <h1>Гостевой дом &quot;У Геннадия Петровича Сумочкина&quot;</h1>
+            <div class="description">
+                Предлагает вам незабываемый отдых на море - мы расположены в экологически чистом районе Мурманской области, что гарантирует вам невиданное ранее единение с природой. Всего 5 часов и 20 минут в полете и вы сможете купаться на побережье Черного моря!
+            </div>
+            <img src="assets/images/elephant.jpg" alt="" class="house-image">
         </div>
     </div>
 </body>
